--- a/descartes_light/package.xml
+++ b/descartes_light/package.xml
@@ -15,6 +15,7 @@
   <depend>libomp-dev</depend>
   <build_depend>ros_industrial_cmake_boilerplate</build_depend>
   <build_depend>boost</build_depend>
+  <test_depend>gtest</test_depend>
 
   <export>
     <build_type>cmake</build_type>
