Updated install location of benchmarks executable

--- a/descartes_light/test/benchmarks/CMakeLists.txt
+++ b/descartes_light/test/benchmarks/CMakeLists.txt
@@ -12,8 +12,4 @@ target_clang_tidy(
   WARNINGS_AS_ERRORS ${DESCARTES_ENABLE_TESTING}
   CHECKS ${DEFAULT_CLANG_TIDY_CHECKS})
 
-install(
-  TARGETS ${PROJECT_NAME}_benchmarks
-  RUNTIME DESTINATION bin/benchmarks
-  LIBRARY DESTINATION lib/benchmarks
-  ARCHIVE DESTINATION lib/benchmarks)
+install(TARGETS ${PROJECT_NAME}_benchmarks RUNTIME DESTINATION lib/${PROJECT_NAME})
