--- a/.github/workflows/ubuntu_focal.yml
+++ b/.github/workflows/ubuntu_focal.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          export DEBIAN_FRONTEND=noninteractive
           apt update -q
           apt install -q -y clang-tidy python3 python3-pip git
           pip3 install -q --upgrade pip
