--- a/.github/workflows/windows_2019.yml
+++ b/.github/workflows/windows_2019.yml
@@ -36,7 +36,7 @@ jobs:
       working-directory: vcpkg
       shell: cmd
       run: |
-        vcpkg install --dry-run --triplet x64-windows ${{ env.VCPKG_PKGS }} > vcpkg_dry_run.txt
+        vcpkg install --dry-run --triplet x64-windows-release ${{ env.VCPKG_PKGS }} > vcpkg_dry_run.txt
 
     - name: cache-vcpkg-archives
       if: startsWith(github.ref, 'refs/tags/v') != true
@@ -44,14 +44,14 @@ jobs:
       uses: pat-s/always-upload-cache@v3
       with:
         path: C:\Users\runneradmin\AppData\Local\vcpkg\archives
-        key: ${{ runner.os }}-x64-vcpkg-${{ hashFiles('vcpkg/vcpkg_dry_run.txt') }}-main
+        key: ${{ runner.os }}-x64-windows-release-vcpkg-${{ hashFiles('vcpkg/vcpkg_dry_run.txt') }}-main
 
     - name: install-depends
       shell: cmd
       run: |
         vcpkg integrate install
         python -m pip install vcstool colcon-common-extensions ninja -q
-        vcpkg install --triplet x64-windows ${{ env.VCPKG_PKGS }}
+        vcpkg install --triplet x64-windows-release ${{ env.VCPKG_PKGS }}
 
     - name: configure-msvc
       uses: ilammy/msvc-dev-cmd@master
@@ -63,7 +63,7 @@ jobs:
       shell: cmd
       run: |
         vcs import src < src/descartes_light/dependencies.rosinstall
-        colcon build --event-handlers console_direct+ --cmake-args -G "Ninja" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Debug -DDESCARTES_ENABLE_TESTING=ON
+        colcon build --event-handlers console_direct+ --cmake-args -G "Ninja" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-release -DEIGEN_DONT_ALIGN=1 -DEIGEN_DONT_VECTORIZE=1 -DCMAKE_BUILD_TYPE=Debug -DDESCARTES_ENABLE_TESTING=ON
         if %ERRORLEVEL% GEQ 1 exit 1
 
     - name: run-test
@@ -71,6 +71,7 @@ jobs:
       shell: cmd
       run: |
         call install/setup.bat
+        set PATH=%PATH%;C:/vcpkg/installed/x64-windows-release/bin
         colcon test --event-handlers console_direct+
         if %ERRORLEVEL% GEQ 1 exit 1
         colcon test-result --verbose
