--- a/.github/workflows/windows_2019.yml
+++ b/.github/workflows/windows_2019.yml
@@ -73,7 +73,7 @@ jobs:
         call install/setup.bat
         set PATH=%PATH%;C:/vcpkg/installed/x64-windows-release/bin
         set test_error=0
-        cmd /c "cd build\descartes_light\test && ctest -C Release --output-on-failure" || set test_error=1
+        cmd /c "cd build\descartes_light\test && ctest -VV -C Release --output-on-failure" || set test_error=1
         exit /b %test_error%
 
         colcon test --event-handlers console_direct+
