--- a/.github/workflows/package_debian.yml
+++ b/.github/workflows/package_debian.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Create artifacts directory
         run: |
-          mkdir artifacts && pwd
+          mkdir artifacts && pwd && ll
 
       - name: Install dependencies
         run: |
