--- a/.github/workflows/package_debian.yml
+++ b/.github/workflows/package_debian.yml
@@ -26,10 +26,6 @@ jobs:
         with:
           path: target_ws/src
 
-      - name: Create artifacts directory
-        run: |
-          bash -c "mkdir artifacts && pwd && ls"
-
       - name: Install dependencies
         run: |
           apt update -q
@@ -45,6 +41,10 @@ jobs:
           target-path: target_ws/src
           target-args: --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_PACKAGE=ON
           run-tests: false
+
+      - name: Create artifacts directory
+        run: |
+          mkdir ${{ github.workspace }}/artifacts && pwd
 
       - name: Package
         working-directory: target_ws/build/descartes_light
