--- a/.github/workflows/package_debian.yml
+++ b/.github/workflows/package_debian.yml
@@ -53,14 +53,13 @@ jobs:
           cpack --config CPackConfig.cmake
           cp ./*.deb $GITHUB_WORKSPACE/artifacts
           cp ./*.tar.xz $GITHUB_WORKSPACE/artifacts
-          cd $GITHUB_WORKSPACE/artifacts && ls
 
       - uses: actions/upload-artifact@v4
         with:
-          name: debian_package
+          name: debian_package_${{ matrix.distro }}
           path: ${{ github.workspace }}/artifacts/*.deb
 
       - uses: actions/upload-artifact@v4
         with:
-          name: archive_package
+          name: archive_package_${{ matrix.distro }}
           path: ${{ github.workspace }}/artifacts/*.tar.xz
